# JUCE-CMake-Plugin-Template

./: .gitignore  CMakeLists.txt  LICENSE  MIGRATE_FROM_PROJUCER.md  README.md
.github/workflows/: Validation.yml
Source/: CMakeLists.txt
